# CenterStage

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  FTC-CHANGELOG.md  README.md  build.common.gradle  build.dependencies.gradle  build.gradle  deploy.py  docker_build.py  gradle.properties  road_runner_python_mock.py
.cargo/: config.toml
.github/workflows/: build.yml  code_quality.yml
.helix/: languages.toml
FtcRobotController/: build.gradle
FtcRobotController/src/main/: AndroidManifest.xml
FtcRobotController/src/main/res/layout/: activity_ftc_controller.xml
FtcRobotController/src/main/res/menu/: ftc_robot_controller.xml
FtcRobotController/src/main/res/values/: strings.xml  styles.xml
FtcRobotController/src/main/res/xml/: device_filter.xml
TeamCode/: build.gradle
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: Button.java  ButtonStatus.java  GamepadManager.java  GamepadWrapper.java  Robot.java  readme.md
TeamCode/src/main/java/org/knightsofni/visionrs/: NativeVision.java
TeamCode/src/main/java/org/theknightsofni/pidrs/: PID.java  PIDrs.java
TeamCode/src/test/java/org/firstinspires/ftc/teamcode/: DriveTest.java  (+5 more)
TeamCode/src/test/java/org/theknightsofni/pidrs/: PIDTest.java  PIDrsTest.java
docker/: Dockerfile
gradle/wrapper/: gradle-wrapper.properties
pidrs/: Cargo.toml
pidrs/src/: lib.rs
visionrs/: .dockerignore  Cargo.toml  Dockerfile
visionrs/.cargo/: config.toml
visionrs/src/: bin.rs  lib.rs
webclient/: app.py  logs.json  strafe log.json  terminal_interpret_drive_logs.py
webclient/templates/: index.html
(+224 files in other folders)
