[package]
name = "visionrs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test"
path = "src/bin.rs"

[dependencies]
jni = "0.21"
opencv = { version = "0.88" }
anyhow = "1.0"

[profile.release]
#strip = true
# Profiling configuration
#debug = 1

[patch.crates-io]
#opencv = { path = './opencv-rust' }
